--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 /2. Java Head/1. Base/out/
+/.idea/
+/1. Base/.idea/
+/Collections/target/
+/1. Base/1. Введение/out/
+/1. Base/2. Типы данных/out/
+/1. Base/3. Игра угадай число/out/
+/2. Java Head/JavaSound/target/
+
