--- a/Practice/pom.xml
+++ b/Practice/pom.xml
@@ -13,4 +13,14 @@
     <maven.compiler.target>17</maven.compiler.target>
   </properties>
 
+  <dependencies>
+    <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-base -->
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-base</artifactId>
+      <version>19</version>
+    </dependency>
+
+  </dependencies>
+
 </project>
